--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@threlte/core": "^7.2.1",
+		"@threlte/extras": "^8.10.1",
 		"@types/eslint": "^8.56.0",
+		"@types/three": "^0.162.0",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"eslint": "^8.56.0",
@@ -27,12 +30,17 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"sass": "^1.71.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"three": "^0.162.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"normalize.css": "^8.0.1"
+	}
 }
