--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"sass": "^1.71.1",
+		"socket.io": "^4.7.4",
+		"socket.io-client": "^4.7.4",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"three": "^0.162.0",
